# diskdantic

./: .pre-commit-config.yaml  Makefile  README.md  demo.py  pyproject.toml
.github/workflows/: ci.yml
src/diskdantic/: __init__.py  collection.py  exceptions.py  handlers.py  nested.py  utils.py
tests/: test_collection.py  test_nested_collection.py
tests/fixtures/blog/: first.md  second.md
tests/fixtures/shows/show1/: episode1.md  episode2.md  episode3.md  info.yml
tests/fixtures/shows/show2/: episode1.md  episode2.md  episode3.md  episode4.md  info.yml
tests/fixtures/shows/show3/: episode1.md  episode2.md  info.yml
