[project]
name = "diskdantic"
version = "0.1.0"
description = "Disk-backed collections powered by Pydantic models."
readme = "README.md"
authors = [
    { name = "koaning", email = "vincentwarmerdam@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.4",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
